# salary-service

./: Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml  runserver.py
alembic/: env.py
alembic/versions/: 2d56c3e02436_init.py
salary_service/app/: app.py
salary_service/db/: database.py  models.py
salary_service/schemas/: schemas.py
salary_service/utils/: utils.py
